src/K8s/networking/minimal-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  namespace: development
  labels:
      name: minimal-ingress
spec:
  rules:
  - host: cluster.com
    http:
      paths:
      - pathType: Prefix
        path: "/bikemanagement"
        backend:
          service:
            name: bikemanagement-api
            port:
              number: 12345
